changed the icon files

--- a/paperprototype.html
+++ b/paperprototype.html
@@ -46,7 +46,7 @@
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" />
             <div class="profile-content pull-left">
                 <h1 class="name">Build your first Browser Extension</h1>
-                <h2 class="desc">Second meeting - Prototype your idea</h2>
+                <h2 class="desc">Second meeting - Prototype your idea <i class="fa fa-lightbulb-o text-danger"></i></h2>
             </div><!--//profile-->
         </div><!--//container-->
     </header><!--//header-->
@@ -142,7 +142,7 @@
                                 <p>As final step we invite you to upload all of your digital resources (photos, files) into your idea submission on GitHub.</p>
                                 <p>That way all of your fellow Open Source Clubs and experts will be able to track your progress and see the amazing work you are doing!</p>
                                 <p>You are now ready to take the next step and start Building your browser add-on! Ask your Club Captain when the next meeting will be.</p>
-                                <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/">Update your idea on GitHub</a>
+                                <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/">Update your idea on GitHub <i class="fa fa-github"></i></a>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -181,7 +181,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Javascript <span class="level-label">Expert</span></h3>
+                                    <h3 class="level-title">Javascript  <span class="level-label">Expert</span></h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="10%">
                                         </div>
@@ -189,7 +189,7 @@
                                 </div><!--//item-->
 
                                 <div class="item">
-                                    <h3 class="level-title">Time<span class="level-label">1 hour</span></h3>
+                                    <h3 class="level-title">Time<span class="level-label">1 hour <i class="fa fa-clock-o"></i></span> </h3>
                                     <div class="level-bar">
                                         <div class="level-bar-inner" data-level="10%">
                                         </div>
@@ -202,7 +202,7 @@
                                     <li><a href="https://docs.google.com/presentation/d/1qySrYEOtLvs7Cuum1TuH7Mud-5M-Bqtli1lqSrJmA7s/edit#slide=id.p">Facilitators slidedeck</a></li>
                                     <li>A projector</li>
                                     <li>Laptops (1 per group)</li>
-                                    <li>Your favorite text editor</li>
+                                    <li><a href="https://developer.mozilla.org/en-US/docs/Learn/Common_questions/Available_text_editors">Your favorite text editor</a></li>
                                     <li>Access to the internet</li>
                                     <li>Paper, cardboard, foam, glue, scissors, markers, bluetack</p>
                                     <li>For testing use programs such as keynote, <a href="https://www.invisionapp.com/" target="_blank">invisio</a> or <a href="https://popapp.in/" target="_blank">pop app</a></li>
